--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,17 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "paths": {
+      "sim": [
+        "dist/sim"
+      ],
+      "db": [
+        "dist/db"
+      ],
+      "field": [
+        "dist/field"
+      ]
+    }
   }
 }
